--- a/aboutus.html
+++ b/aboutus.html
@@ -88,7 +88,7 @@
             </div>
             <div class="col">
                 <div class="card bg-light mt-3">
-                    <blockquote class="blockquote card-body">    
+                    <blockquote id="blockquote-section" class="blockquote card-body">    
                         <p class="mb-0">
                             I will not follow where the path may lead, but I will go where there is no path, and I will leave a trail.
                         </p>
@@ -166,7 +166,7 @@
             </div>
         </div>
 
-        <div class="row row-content">
+        <div class="row row-content-final">
             <div class="col-sm-9">
                 <h2>Facts &amp; Figures</h2>
                 <div class="table-responsive">
@@ -226,8 +226,8 @@
                     <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsite@nucamp.co" ><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                    <a role="button" class="btn contact-button" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
+                    <a role="button" class="btn contact-button" href="mailto:campsite@nucamp.co" ><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
            </div>
         </div>
