--- a/contactus.html
+++ b/contactus.html
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        <div class="row row-content">
+        <div class="row row-content-final">
             <div class="col-12">
                 <h2>Send us your Feedback</h2>
                 <hr />
@@ -162,8 +162,8 @@
                     <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsite@nucamp.co" ><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                    <a role="button" class="btn contact-button" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
+                    <a role="button" class="btn contact-button" href="mailto:campsite@nucamp.co" ><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
            </div>
         </div>
