--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <a class="btn btn-info btn-lg text-nowrap" href="#reserveForm" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
+                    <a class="btn btn-light btn-lg text-nowrap" href="#reserveForm" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header bg-info">
                     <h3 class="modal-title">Login</h3>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
@@ -183,10 +183,10 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content align-items-center">
+        <div class="row row-content-final align-items-center">
             <div class="col-sm-6 mx-auto">
                 <div class="card">
-                    <h3 class="card-header bg-info text-white">
+                    <h3 class="card-header bg-primary text-white">
                         Reserve a Campsite
                     </h3>
                     <div class="card-body">
@@ -213,7 +213,7 @@
                             </div>
                             <div class="form-group row">
                                 <div class="col">
-                                    <input class="btn btn-primary" value="Search" type="submit" />
+                                    <input class="btn btn-primary text-white" value="Search" type="submit" />
                                 </div>
                             </div>
                         </form>
@@ -244,8 +244,8 @@
                     <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsite@nucamp.co" ><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                    <a role="button" class="btn contact-button" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
+                    <a role="button" class="btn contact-button" href="mailto:campsite@nucamp.co" ><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
             </div>
         </div>
