Finished layout changes

--- a/aboutus.html
+++ b/aboutus.html
@@ -86,9 +86,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card bg-light mt-3">
-                    <blockquote id="blockquote-section" class="blockquote card-body">    
+            <div class="col" >
+                <div id="blockquote-card" class="card mt-3">
+                    <blockquote class="blockquote card-body">    
                         <p class="mb-0">
                             I will not follow where the path may lead, but I will go where there is no path, and I will leave a trail.
                         </p>
@@ -172,14 +172,14 @@
                 <div class="table-responsive">
                     <table class="table table-striped">
                         <thead>
-                            <tr class="bg-primary text-light">
+                            <tr class="bg-info text-light">
                                 <th></th>
                                 <th>2016</th>
                                 <th>2017</th>
                                 <th>2018</th>
                             </tr>
                         </thead>
-                        <tbody class="table-primary">
+                        <tbody class="table-success">
                             <tr>
                                 <th>Staff Wilderness Experts</th>
                                 <td>10</td>
