--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             </div>
                             <div class="form-row">
                                 <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-primary btn-sm ml-1">Sign In</button>
+                                <button type="submit" class="btn btn-info btn-sm ml-1">Sign In</button>
                             </div>
                         </form>
                     </div>
