--- a/cip-aboutus.html
+++ b/cip-aboutus.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/cip-styles.css" />
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
@@ -34,16 +34,16 @@
     <!-- NAVBAR SECTION -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" width="30" height="30" /></a>
+            <a class="navbar-brand" href="cip-index.html"><img src="img/logo.png" width="30" height="30" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="cip-index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
                     <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i> About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="cip-contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -55,7 +55,7 @@
             <div class="col">
                 <!-- START BREADCRUMB SECTION  -->
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="cip-index.html">Home</a></li>
                     <li class="breadcrumb-item active">About</li>
                 </ol>
                 <!-- END BREADCRUMB SECTION  -->
@@ -65,28 +65,97 @@
         </div>
 
         <div class="row row-content">
-            <div class="col-sm-6">
+            <div class="col col-lg-7 col-xl">
                 <h3>Our Mission</h3>
                 <p>We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access to adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited with each other.</p>
             </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
-                    <div class="card-body">
-                        <dl class="row">
-                            <dt class="col-6">Founded</dt>
-                            <dd class="col-6">February 3, 2016</dd>
-                            <dt class="col-6">No. of Campsites in 2019</dt>
-                            <dd class="col-6">563</dd>
-                            <dt class="col-6">No. of Reviews in 2019</dt>
-                            <dd class="col-6">4388</dd>
-                            <dt class="col-6">Employees</dt>
-                            <dd class="col-6">42</dd>
-                        </dl>
+            <div class="col col-lg-5 col-xl">
+                <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                      <a class="nav-link active bg-primary text-white" id="nucamp-tab" data-toggle="tab" href="#nucamp" role="tab" aria-controls="nucamp" aria-selected="true">Nucamp</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                      <a class="nav-link  bg-success text-white" id="breadcrumb-trail-tab" data-toggle="tab" href="#breadcrumb-trail" role="tab" aria-controls="breadcrumb-trail" aria-selected="false">Breadcrumb Trail</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                      <a class="nav-link  bg-warning text-white" id="react-lake-tab" data-toggle="tab" href="#react-lake" role="tab" aria-controls="react-lake" aria-selected="false">React Lake</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link  bg-danger text-white" id="chrome-river-tab" data-toggle="tab" href="#chrome-river" role="tab" aria-controls="chrome-river" aria-selected="false">Chrome River</a>
+                      </li>
+                  </ul>
+                  <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="nucamp" role="tabpanel" aria-labelledby="nucamp">
+                        <div class="card">
+                            <h3 class="card-header bg-primary text-white">Nucamp - Facts At a Glance</h3>
+                            <div class="card-body">
+                                <dl class="row">
+                                    <dt class="col-6">Founded</dt>
+                                    <dd class="col-6">February 3, 2016</dd>
+                                    <dt class="col-6">No. of Campsites in 2019</dt>
+                                    <dd class="col-6">563</dd>
+                                    <dt class="col-6">No. of Reviews in 2019</dt>
+                                    <dd class="col-6">4388</dd>
+                                    <dt class="col-6">Employees</dt>
+                                    <dd class="col-6">42</dd>
+                                </dl>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <div class="tab-pane fade" id="breadcrumb-trail" role="tabpanel" aria-labelledby="breadcrumb-trail">
+                        <div class="card">
+                            <h3 class="card-header bg-success text-white">Breadcrumb Trail</h3>
+                            <div class="card-body">
+                                <dl class="row">
+                                    <dt class="col-6">Founded</dt>
+                                    <dd class="col-6">April 5, 2016</dd>
+                                    <dt class="col-6">No. of Visitors in 2019</dt>
+                                    <dd class="col-6">104</dd>
+                                    <dt class="col-6">No. of Reviews in 2019</dt>
+                                    <dd class="col-6">1577</dd>
+                                    <dt class="col-6">Employees</dt>
+                                    <dd class="col-6">4</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="react-lake" role="tabpanel" aria-labelledby="react-lake">
+                        <div class="card">
+                            <h3 class="card-header bg-warning text-white">React Lake</h3>
+                            <div class="card-body">
+                                <dl class="row">
+                                    <dt class="col-6">Founded</dt>
+                                    <dd class="col-6">June 27, 2017</dd>
+                                    <dt class="col-6">No. of Visitors in 2019</dt>
+                                    <dd class="col-6">79</dd>
+                                    <dt class="col-6">No. of Reviews in 2019</dt>
+                                    <dd class="col-6">2368</dd>
+                                    <dt class="col-6">Employees</dt>
+                                    <dd class="col-6">3</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="chrome-river" role="tabpanel" aria-labelledby="chrome-river">
+                        <div class="card">
+                            <h3 class="card-header bg-danger text-white">Chrome River</h3>
+                            <div class="card-body">
+                                <dl class="row">
+                                    <dt class="col-6">Founded</dt>
+                                    <dd class="col-6">December 9, 2018</dd>
+                                    <dt class="col-6">No. of Visitors in 2019</dt>
+                                    <dd class="col-6">45</dd>
+                                    <dt class="col-6">No. of Reviews in 2019</dt>
+                                    <dd class="col-6">567</dd>
+                                    <dt class="col-6">Employees</dt>
+                                    <dd class="col-6">5</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
             </div>
-            <div class="col" >
+            <div class="col-12" >
                 <div id="blockquote-card" class="card mt-3">
                     <blockquote class="blockquote card-body">    
                         <p class="mb-0">
@@ -212,10 +281,10 @@
                 <div class="col-4 col-sm-2 offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="cip-index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Sites</a></li>
-                        <li><a href="contactus.html">Contact</a></li>
+                        <li><a href="cip-contactus.html">Contact</a></li>
                     </ul>
                 </div> 
                 <div class="col-6 col-sm-5 text-center">
